https://bugs.webkit.org/show_bug.cgi?id=99202 [Chromium] shift-click fails to spawn new window with target=_blank

Reviewed by Adam Barth

No new tests in WebKit-land--see
https://codereview.chromium.org/11235048/ for tests that I'll submit
once this lands.

* src/ChromeClientImpl.cpp:
Change currentEventShouldCauseBackgroundTab to updatePolicyForEvent; we
were looking up the right policy, then throwing it away if it wasn't
forcing a background tab.
(WebKit::ChromeClientImpl::updatePolicyForEvent):
(WebKit::ChromeClientImpl::getNavigationPolicy):


Canonical link: https://commits.webkit.org/118314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132399 268f45cc-cd09-0410-ab3c-d52691b4dbfc